@@ -4,3 +4,8 @@ cerebro-1-0-0-pre5
 cerebro-1-0-0-pre6
 flush ability
 update thread w/ callback func
+
+cerebro-1-0-0-pre7
+- cleanup
+
+cerebro-1-0-0
